--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Kahunas
+APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:1ut0Pr5Q/yZhatCgsJ28cnrFVXZNjUh9NBqmzYJgtD0=
 APP_DEBUG=true
@@ -24,10 +24,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-
-DB_DATABASE=ajkpqgnada
-DB_USERNAME=ajkpqgnada
-DB_PASSWORD=rVcdCHP32H
+DB_DATABASE=kahunas
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
